# face_diseases

./: .gitignore  README.md  main.py  models.py  pyproject.toml  runs.txt  train.py  utils.py
logs/20260308-160337/: events.out.tfevents.1773000217.Ankits-M4-Max.local.46645.0
logs/20260308-161453/: events.out.tfevents.1773000893.Ankits-M4-Max.local.48618.0
logs/20260308-161854/: events.out.tfevents.1773001134.Ankits-M4-Max.local.48999.0
logs/20260308-162348/: events.out.tfevents.1773001428.Ankits-M4-Max.local.49411.0
logs/20260308-163135/: events.out.tfevents.1773001895.Ankits-M4-Max.local.50015.0
